<resources>
    <string name="language">语言</string>
    <string name="sign_in_fail">签到失败</string>
    <string name="sign_in_success">签到成功</string>
    <string name="open_the_device">请开启设备位置权限</string>
    <string name="error_bluetooth_not_supported">不支持蓝牙</string>
    <string name="error_ble_not_supported">不支持Ble</string>
    <string name="noRecording_data">本频道暂无录音数据</string>
    <string name="tts_notsupport">TTS暂时不支持这种语音朗读</string>
    <string name="server_address_empty">服务器地址不能为空</string>
    <string name="address_ip">IP地址</string>
    <string name="lonin_ip">更多</string>
    <string name="lonin_title">MinChat</string>
    <string name="channel">频道</string>
    <string name="personal_username_hint">用户号/手机号</string>
    <string name="password">密码</string>
    <string name="app_name">MinChat</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="connectionClosed">连接断开</string>
    <string name="connectionRefused">拒绝连接</string>
    <string name="connectFailed">连接失败</string>
    <string name="connect_fail_please_retry">连接失败，请重试</string>
    <string name="connected">在线</string>
    <string name="disconnected">离线</string>
    <string name="leave">离开</string>
    <string name="enable_float_btn">悬浮对讲键</string>
    <string name="enable_auto_launch">开机自启动</string>
    <string name="fix_3s">解决蓝牙无法拾音问题</string>
    <string name="notification">提示音</string>
    <string name="alert_volume">提示音量</string>
    <string name="support_headset_key">线控及蓝牙电话键对讲</string>
    <string name="handmic_alarm">手咪追加提示音</string>
    <string name="more_heartbeat">强力防掉线(实验)</string>
    <string name="short_delay">低延时接收(实验)</string>
    <string name="ham_notif">HAM风格提示音</string>
    <string name="support_vol_key">音量键对讲</string>
    <string name="you_have_not">您还没有频道，请立刻</string>
    <string name="create">创建</string>
    <string name="or">或者</string>
    <string name="join">加入</string>
    <string name="one">一个吧！</string>
    <string name="syncing">同步数据...</string>
    <string name="be_kicked">您的账号在其他设备登录，本地已断开</string>
    <string name="share_content">我正在用滔滔对讲，群组实时语音沟通，来聊聊吧！下载地址：http://t.cn/RaQ3Wo8，淘宝：http://t.cn/RWCPAZ0</string>
    <string name="idle">空闲</string>
    <string name="change_chan_pwd">修改口令</string>
    <string name="notif">提示</string>
    <string name="confirm_set_private">设为私密频道后，其他人搜索不到。是否继续？</string>
    <string name="confirm_set_public">设为公开频道后，其他人能搜索到。是否继续？</string>
    <string name="manage_member_auth">成员权限管理</string>
    <string name="confirm_delete_chan">将被永久删除，是否继续?</string>
    <string name="confirm_quit_chan">退出后将不再显示此频道，是否继续?</string>
    <string name="as_contact">为好友？</string>
    <string name="apply_sent">已发送申请</string>
    <string name="public_channel">公开频道</string>
    <string name="private_channel">私密频道</string>
    <string name="no_pwd">无需口令</string>
    <string name="i_create">我在滔滔对讲创建了频道[</string>
    <string name="i_in_totalk">我在滔滔对讲的[</string>
    <string name="kouling">口令</string>
    <string name="confirm_delete_contact">删除好友？</string>
    <string name="device_ok_click_to_disconnect">设备已连接\n点击图标可断开</string>
    <string name="connecting_device">连接设备...</string>
    <string name="scaning_device">搜索设备...</string>
    <string name="invalid_phone">手机号无效，请重新确认</string>
    <string name="reset_pwd">重设密码</string>
    <string name="set_new_password">设置新密码(6位以上)</string>
    <string name="submit">提交</string>
    <string name="reg_ok">恭喜，注册成功！\n您的滔滔号是</string>
    <string name="reg_fail">注册失败，本手机号可能已注册过!</string>
    <string name="reset_pwd_ok">重设密码成功，请重新登录!</string>
    <string name="reset_pwd_fail">重设密码失败，请稍后重试</string>
    <string name="submitting">提交中...</string>
    <string name="recommand_public_channels">推荐公共频道：</string>
    <string name="exp_chan">滔滔体验频道(#1024)</string>
    <string name="motor_chan">全国摩友之家(#1302)</string>
    <string name="ham_chan">全国HAM通联(#6702)</string>
    <string name="car_chan">营运车主交流(#6704)</string>
    <string name="register_new_user">注册新用户</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="registering">注册中，请稍候...</string>
    <string name="login">登录</string>
    <string name="logging_in">登录中，请稍候...</string>
    <string name="login_fail">登录失败</string>
    <string name="userid_bad_format">用户名或号码格式错误，请重试</string>
    <string name="channel_name_bad_format">频道名称格式错误，请重试</string>
    <string name="channel_id_bad_format">频道号格式错误，请重试</string>
    <string name="channel_pwd_bad_format">口令应为4位数字，请重试</string>
    <string name="password_different">两次输入密码不一致，请重试</string>
    <string name="password_bad_format">密码格式错误，请重试</string>
    <string name="nick_bad_format">昵称格式错误，请重试</string>
    <string name="phone_bad_format">号码格式错误，请重试</string>
    <string name="channel_no_bad_format">号码格式错误，请重试</string>
    <string name="code_bad_format">验证码格式错误，请确认</string>
    <string name="wrong_old_pwd">原密码不正确，请重试</string>
    <string name="different_pwd">两次输入不同，请重试</string>
    <string name="nick_needed">请设置昵称</string>
    <string name="connect_fail">连接服务器失败</string>
    <string name="nickname">昵称</string>
    <string name="input_nickname">请设置昵称</string>
    <string name="input_phonenumber">请输入手机号</string>
    <string name="get_sms">获取短信验证码</string>
    <string name="input_auth_number">输入验证码</string>
    <string name="set_password">请设置密码</string>
    <string name="set_password_again">请再次输入密码</string>
    <string name="service_rule">服务协议</string>
    <string name="check_rule_first">请确认阅读并同意《服务协议》</string>
    <string name="create_channel">创建频道</string>
    <string name="join_channel">加入频道</string>
    <string name="add_contact">添加好友</string>
    <string name="contact">好友</string>
    <string name="push_to_talk">按住说话</string>
    <string name="add">添加</string>
    <string name="tmp_call">临时群组</string>
    <string name="normal_call">自定义群组</string>
    <string name="use_accessory">使用配件</string>
    <string name="device_disc_click_to_reconnect">设备未连接\n点击图标开始连接</string>
    <string name="accessory_intro">滔滔对讲专用配件，包括对讲手机、蓝牙按键、手咪、对讲机链路器等。黑屏对讲，一键起麦</string>
    <string name="detail">详情</string>
    <string name="prev_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="search_channel">搜索频道</string>
    <string name="set_count">账号设置</string>
    <string name="set_nick">设置昵称</string>
    <string name="set_pwd">设置密码(6位以上)</string>
    <string name="change_nick">修改昵称</string>
    <string name="agree">同意接受</string>
    <string name="verify_phone">验证手机号</string>
    <string name="phone_number">手机号</string>
    <string name="input_verify_code">请输入收到的短信验证码</string>
    <string name="normal">普通</string>
    <string name="check_update">检查新版本</string>
    <string name="scan_to_download">扫码下载</string>
    <string name="record_help">默认音质优化。若讲话音量小或蓝牙录音异常\n请尝试选择普通模式</string>
    <string name="normal_mode">普通模式</string>
    <string name="process_mode">音质优化</string>
    <string name="new_chan_pwd">新口令(4位数字，不填表示不设口令)</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_again">请再输入一次</string>
    <string name="auto_login">下次启动时自动登录</string>
    <string name="channel_name">频道名称</string>
    <string name="channel_pwd">频道口令(4位数字，不填表示不设口令)</string>
    <string name="channel_kouling">频道口令</string>
    <string name="ptt_broadcast_help">注：某些手机有专门PTT按键，并可发送按键广播。设置后，可实现后台和黑屏状态下对讲。滔滔内置支持按下：android.intent.action.PTT.down，松开android.intent.action.PTT.up广播值</string>
    <string name="when_down">按下时</string>
    <string name="when_up">松开时</string>
    <string name="press_key">请按下实体键(禁止耳机电话键)</string>
    <string name="record_mode">录音设置</string>
    <string name="delete">删除</string>
    <string name="eliminate">清除</string>
    <string name="set_broadcast">设置按键广播值</string>
    <string name="ptt_key_def">PTT按键定义</string>
    <string name="notif_style">提示音风格</string>
    <string name="send_sms_to">即将发送验证短信到</string>
    <string name="verify_ok">验证成功</string>
    <string name="verify_fail">验证失败</string>
    <string name="verify_sent">验证码已发送</string>
    <string name="sent_and_wait">已发送...(</string>
    <string name="send_again">重新发送(</string>
    <string name="headset_help">支持普通线控耳机和蓝牙耳机/音箱电话键对讲。单击开始，单击结束</string>
    <string name="handmic_alarm_help">勾选后，手咪自身也会播放起麦、放麦、占线提示音</string>
    <string name="more_heartbeat_help">勾选后，软件更稳定保持在线，但可能更耗电</string>
    <string name="short_delay_help">勾选后，接收语音延时更短，但网络不稳定时可能声音不连续</string>
    <string name="online">上线</string>
    <string name="offline">离线</string>
    <string name="ptt_down">PTT按下</string>
    <string name="i_begin">自己起麦</string>
    <string name="i_stop">自己放麦</string>
    <string name="other_begin">别人起麦</string>
    <string name="other_stop">别人放麦</string>
    <string name="recommand_channel_warning">公共频道，文明聊天</string>
    <string name="recommand_channel_warning_detail">污言秽语、不当言行者踢出频道、全站封禁或向网监部门举报</string>
    <string name="new_apply">+</string>
    <string name="cant_add_yourself">不能添加自己为好友</string>
    <string name="add_you_as_contact">添加你为好友</string>
    <string name="accept">接受</string>
    <string name="decline">拒绝</string>
    <string name="thanks">感谢@风清扬@大董@子涵@常利@我不是许三多@BG7AAP@BG9NVY-宁夏@金肛oO闪闪亮@Arius 等的大力支持！</string>
    <string name="confirm_float_permission">请确认在手机设置中，打开美洽的悬浮窗权限</string>
    <string name="auth_kick">踢出频道</string>
    <string name="auth_back">取消踢出</string>
    <string name="auth_mute">设置禁言</string>
    <string name="auth_unmute">取消禁言</string>
    <string name="auth_monitor">设为副管</string>
    <string name="auth_unmonitor">撤销副管</string>
    <string name="auth_prior">允许插话</string>
    <string name="auth_unprior">禁止插话</string>
    <string name="debug">调试</string>
    <string name="noname">未命名</string>
    <string name="listen_ok">监听频道</string>
    <string name="change_pwd">修改密码</string>
    <string name="change_chan_name">改频道名</string>
    <string name="quit_app">退出应用</string>
    <string name="quit">退出</string>
    <string name="channel_detail">频道详情</string>
    <string name="share_channel">分享频道</string>
    <string name="account">账号</string>
    <string name="settings">设置</string>
    <string name="accessory">配件</string>
    <string name="help">帮助</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="homepage_link">www.allptt.com</string>
    <string name="about_help_title1">后台长连接</string>
    <string name="about_help_content1">
        为防止后台被杀，请确认锁定任务，方法是点击手机下方的多任务键-找到美洽-下移-点击"锁定任务"\n
        或设置-电池-锁屏清理应用-美洽对讲(不清理)\n
        为防止后台掉线，请确认:\n
        小米手机请在手机设置的电量和性能中，关闭美洽的“神隐模式”\n
        华为手机如有省电模式设置，应设置为“性能模式”。在设置-电池-锁屏清理或受保护应用里，保护或不清理滔滔\n
        另外在设置-应用管理-设置-特殊访问权限-忽略电池优化-美洽对讲(允许)\n
        vivo手机请在i管家->省电管理->后台高耗电->允许滔滔运行。另外美洽加入"加速白名单"\n
        oppo手机请设置电池-关闭"后台冻结"\n
        三星手机在安装时请打开“自动运行”\n
        其他手机也请检查相关设置，确保系统不会限制程序后台功能\n
        如果手机安装了手机卫士、手机管家类软件，请把美洽加入清理、加速的白名单\n
        若使用Wifi网络，请确保睡眠期间Wifi始终连接
    </string>
    <string name="about_help_title2">黑屏起麦</string>
    <string name="about_help_content2">
        推荐使用美洽蓝牙遥控按键、美洽蓝牙手咪、美洽对讲手机，按下讲话，松开结束。详情点击 配件 按钮\n
        Android手机也可使用线控耳机、蓝牙耳机的电话键。短按开始，短按结束
    </string>
    <string name="about_help_title3">其他</string>
    <string name="about_help_content3">
        美洽对讲使用完全免费，连续听或说一小时，耗流量近6M，请放心使用!\n
        更多问题，请进QQ群讨论：452570602\n
        企业用户、SDK集成及商务合作，请联系QQ 1431429045 群辉科技或邮箱kylindev@qq.com
    </string>
    <string name="search_handmic">搜索新设备</string>
    <string name="stop_search_handmic">停止搜索</string>
    <string name="channelName">频道名称</string>
    <string name="channelId">频道号</string>
    <string name="user_or_password_wrong">用户名或密码错误</string>
    <string name="server_full">服务器人数已达上限，拒绝登录</string>
    <string name="wrong_version">客户端版本低，请先升级</string>
    <string name="wrong_client_type">客户端版本类型不匹配，请重试</string>
    <string name="net_fail_retry">网络连接中断，正在尝试重连\n如果后台自动掉线，请点此查看帮助</string>
    <string name="net_fail">网络未连接</string>
    <string name="unknown_device">未知设备</string>
</resources>