<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"   
	android:orientation="vertical"
	android:padding="5dp" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/online"
			android:gravity="center"
			android:textSize="@dimen/text_size_small"/>
		<SeekBar
			android:id="@+id/sb_volume_online"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_gray" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/offline"
			android:gravity="center"
			android:textSize="@dimen/text_size_small"/>
		<SeekBar
			android:id="@+id/sb_volume_offline"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_gray" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/ptt_down"
			android:gravity="center"
			android:textSize="@dimen/text_size_small"/>
		<SeekBar
			android:id="@+id/sb_volume_ptt_press"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_gray" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/i_begin"
			android:gravity="center"
			android:textSize="@dimen/text_size_small"/>
		<SeekBar
			android:id="@+id/sb_volume_i_begin"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_gray" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/i_stop"
			android:gravity="center"
			android:textSize="@dimen/text_size_small"/>
		<SeekBar
			android:id="@+id/sb_volume_i_end"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_gray" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/other_begin"
			android:gravity="center"
			android:textSize="@dimen/text_size_small"/>
		<SeekBar
			android:id="@+id/sb_volume_other_begin"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider_gray" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/other_stop"
			android:gravity="center"
			android:textSize="@dimen/text_size_small"/>
		<SeekBar
			android:id="@+id/sb_volume_other_end"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/black" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/tv_alert_cancle"
			android:layout_width="0dp"
			android:layout_height="35dp"
			android:layout_weight="1"
			android:background="@drawable/selector_setting"
			android:text="@string/cancel"
			android:gravity="center"/>
		<TextView
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="@color/black"/>
		<TextView
			android:id="@+id/tv_alert_ok"
			android:layout_width="0dp"
			android:layout_height="35dp"
			android:layout_weight="1"
			android:text="@string/ok"
			android:background="@drawable/selector_setting"
			android:gravity="center"/>

	</LinearLayout>
</LinearLayout> 