<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"   
	android:orientation="vertical"
	android:padding="5dp" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="10dp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/ptt_broadcast_help"
		android:textSize="@dimen/text_size_small2" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="10dp" />

	<EditText
		android:id="@+id/et_broadcast_down"
		android:hint="@string/when_down"
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height"
		android:textSize="@dimen/text_size_small2"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
		android:background="@drawable/shape_et_bg" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="10dp" />
	<EditText
		android:id="@+id/et_broadcast_up"
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height"
		android:hint="@string/when_up"
		android:textSize="@dimen/text_size_small2"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
		android:background="@drawable/shape_et_bg" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="10dp" />

</LinearLayout> 